k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qubiva
  namespace: qubiva
  labels:
    app: qubiva
spec:
  type: ClusterIP
  selector:
    app: qubiva
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
